--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -9,10 +9,10 @@
     height: 10vh;
     max-width: 100vw;
     display: flex;
-    background-color: var(--color-black);
+    background-color: black;
     align-items: center;
     justify-content: space-between;
-    padding: 1rem 2rem;
+    padding: 4rem 2rem;
 }
 .navbar__app__logo{
     display: flex;
